--- a/Client/Dt.Sample/Charts/BaseChart.xaml
+++ b/Client/Dt.Sample/Charts/BaseChart.xaml
@@ -23,7 +23,6 @@
                         <a:CFree Title="图表类型">
                             <ComboBox x:Name="_cbType" />
                         </a:CFree>
-                        <a:CList ID="Theme" Title="主题样式" />
                         <a:CList ID="Palette" Title="调色板" />
                         <a:CText ID="Header" Title="大标题" />
                         <a:CBool ID="View.Inverted" Title="转换XY轴" />
@@ -33,7 +32,7 @@
 
                         <a:CBar Title="Y轴设置" />
                         <a:CText ID="View.AxisY.Title" Title="标题" />
-                        <a:CText ID="View.AxisY.MajorUnit" Title="坐标轴单位" />
+                        <!--<a:CText ID="View.AxisY.MajorUnit" Title="坐标轴单位" />-->
                     </a:Fv>
                     <a:Fv Data="{Binding ElementName=_legend}">
                         <a:CBar Title="图例设置" />
