--- a/Client/Bs.Kehu/Home/DefaultHome.xaml
+++ b/Client/Bs.Kehu/Home/DefaultHome.xaml
@@ -5,7 +5,7 @@
     xmlns:a="using:Dt.Base"
     xmlns:home="using:Dt.Kehu"
     AutoSaveLayout="False"
-    Home="百岁,关心,福袋,我的">
+    Home="关心,百岁,我的">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
@@ -13,23 +13,26 @@
                 <home:MainPage x:Name="_mainPage" />
             </a:Tab>
             <a:Tab Title="关心" Icon="心电">
-
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="增加" Icon="加号" Click="OnAddFriend" ShowInPhone="Icon" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <home:ChatHome x:Name="_chat" />
             </a:Tab>
         </a:Tabs>
     </a:WinItem>
-    <a:WinCenter>
+    <!--<a:WinCenter>
         <a:Tabs>
             <a:Tab Title="福袋" Icon="购物车">
                 
             </a:Tab>
         </a:Tabs>
-    </a:WinCenter>
+    </a:WinCenter>-->
     <a:WinItem DockState="DockedRight">
         <a:Tabs>
-            <a:Tab Title="我的" Icon="个人信息">
-                <StackPanel>
-                    <Button Content="初始化" Click="OnInit" />
-                </StackPanel>
+            <a:Tab Title="我的" Icon="个人信息"  HideTitleBar="True">
+                <home:MyMain x:Name="_myMain" />
             </a:Tab>
         </a:Tabs>
     </a:WinItem>
