--- a/Client/Bs.Kehu/Chat/ChatHome.xaml
+++ b/Client/Bs.Kehu/Chat/ChatHome.xaml
@@ -4,12 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Lv x:Name="_lv">
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
         <a:Ex.Menu>
             <a:Menu>
-                <a:Mi ID="清空聊天" Icon="删除" />
+                <a:Mi ID="清空聊天" Icon="垃圾箱" />
                 <a:Mi ID="置顶" Icon="向上" />
                 <a:Mi ID="置底" Icon="向下" />
+                <a:Mi ID="删除" Icon="删除" />
             </a:Menu>
         </a:Ex.Menu>
         <DataTemplate>
