--- a/Client/Dt.Sample/SamplesMain.xaml
+++ b/Client/Dt.Sample/SamplesMain.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    NaviWidth="630">
+    NaviWidth="630"
+    Title="控件样例">
 
     <a:Lv x:Name="_lv" ViewMode="Tile" SelectionMode="None" ItemClick="OnItemClick" ItemHeight="90">
         <DataTemplate>
