--- a/Client/Zend/Home.xaml
+++ b/Client/Zend/Home.xaml
@@ -3,20 +3,34 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    x:Name="_win"
-    NaviWidth="400">
+    Title="主页">
 
     <a:NaviWin.Menu>
         <a:Menu>
-            <a:Mi ID="保存" Icon="保存" />
-            <a:Mi ID="搜索" Icon="搜索" />
+            <a:Mi ID="刷新" Icon="刷新" ShowInPhone="Icon" Click="OnRefresh" />
         </a:Menu>
     </a:NaviWin.Menu>
     
     <StackPanel>
-        <a:BtnItem Icon="个人信息" Title="页面窗口" Desc="右侧加载页面窗口内容" Click="OnNavi" Cls="Dt.Sample.PageWinDemo" />
-        <a:BtnItem Icon="备注" Title="普通窗口" Desc="右侧加载普通窗口内容" Click="OnNavi" Cls="Dt.Sample.WinDemo" />
-        <a:BtnItem Icon="排列" Title="导航栏数据" Desc="左侧导航栏自动加载导航项" Click="OnNaviData" />
-        <CheckBox Content="隐藏标题栏" IsChecked="{Binding HideTitleBar,Mode=TwoWay,ElementName=_win}" />
+        <a:BtnItem x:Name="_btnPwd" Icon="钥匙" Title="账号" Click="OnNavi" Cls="Dt.Sample.PageWinDemo" />
+        <a:BtnItem Icon="警告" Title="超期" Click="OnNavi">
+            <StackPanel x:Name="_spExpire" Orientation="Horizontal" VerticalAlignment="Center">
+                <Ellipse Fill="Red" Height="10" Width="10" VerticalAlignment="Center" IsHitTestVisible="False" />
+                <TextBlock x:Name="_tbExpire" Style="{StaticResource 小字}" Margin="4,0,0,0" />
+            </StackPanel>
+        </a:BtnItem>
+        <a:BtnItem Icon="最后" Title="快到期" Desc="十天之内" Click="OnNavi">
+            <StackPanel x:Name="_spSoon" Orientation="Horizontal" VerticalAlignment="Center">
+                <Ellipse Fill="Red" Height="10" Width="10" VerticalAlignment="Center" IsHitTestVisible="False" />
+                <TextBlock x:Name="_tbSoon" Style="{StaticResource 小字}" Margin="4,0,0,0" />
+            </StackPanel>
+        </a:BtnItem>
+        <a:BtnItem Icon="加号" Title="新增" Click="OnNavi" Cls="Dt.Sample.WinDemo" />
+        <a:BtnItem Icon="文件夹" Title="所有" Click="OnNavi">
+            
+        </a:BtnItem>
+        <a:BtnItem Icon="搜索" Title="查询" Click="OnNavi" />
+        <a:BtnItem Icon="对比图" Title="统计图" Click="OnNavi" />
+        <a:BtnItem Icon="垃圾箱" Title="已注销" Click="OnNavi" />
     </StackPanel>
 </a:NaviWin>
