ICellUI.UIType 为 Image 时从文件服务下载图片功能

--- a/Client/Dt.App/Chat/ChatMemberList.xaml
+++ b/Client/Dt.App/Chat/ChatMemberList.xaml
@@ -19,7 +19,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <a:Dot ID="icon" Width="50" Height="50" Margin="0,0,10,0" />
+                <a:Dot ID="photo" UIType="Image" Width="50" Height="50" Margin="0,0,10,0" />
                 <a:Dot ID="name" Grid.Column="1" />
             </Grid>
         </DataTemplate>
