--- a/Client/Dt.Sample/Base/FileAndImgHome.xaml
+++ b/Client/Dt.Sample/Base/FileAndImgHome.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.Sample.CrossHome"
+    x:Class="Dt.Sample.FileAndImgHome"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
