--- a/Client/Dt.Base/Chat/ChatList.xaml
+++ b/Client/Dt.Base/Chat/ChatList.xaml
@@ -19,7 +19,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <a:Dot ID="icon" UIType="Image" Width="50" Height="50" Margin="0,0,10,0" />
+                <a:Dot ID="photo" UIType="Image" Width="50" Height="50" Margin="0,0,10,0" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <Grid>
                         <Grid.ColumnDefinitions>
@@ -29,9 +29,9 @@
                         </Grid.ColumnDefinitions>
                         <a:Dot ID="OtherName" />
                         <Ellipse Visibility="{Binding [Unread], Converter={StaticResource CvBoolToVisible}}" Fill="Red" Height="8" Width="8" Margin="4,4,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" />
-                        <a:Dot ID="STime" Foreground="{StaticResource 深灰边框}" FontSize="12" VerticalAlignment="Center" Grid.Column="2" />
+                        <TextBlock Text="{Binding [stime], Converter={StaticResource CvAutoDate}}" Foreground="{StaticResource 深灰边框}" FontSize="12" VerticalAlignment="Center" Grid.Column="2" />
                     </Grid>
-                    <a:Dot ID="Content" Foreground="{StaticResource 深灰边框}" FontSize="12" Height="15" />
+                    <a:Dot ID="msg" Foreground="{StaticResource 深灰边框}" FontSize="12" Height="15" />
                 </StackPanel>
             </Grid>
         </DataTemplate>
