--- a/Client/Dt.Sample/FormView/CellsDemo.xaml
+++ b/Client/Dt.Sample/FormView/CellsDemo.xaml
@@ -93,6 +93,19 @@
                     <a:CColor ID="color" Title="颜色"/>
                     <a:CColor ID="colorstr" Title="颜色字符串"/>
                     <a:CColor ID="colorbrush" Title="颜色画刷"/>
+
+                    <a:CBar Title="链接格" />
+                    <a:CLink Title="默认链接格" />
+                    <a:CLink RowSpan="2" IsHorStretch="False">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="ms-appx:///Assets/logo.png" Width="50" Height="50" Margin="0,0,20,0" Stretch="Uniform" />
+                            <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="李世杰" Foreground="Black" FontSize="20" />
+                                <TextBlock Text="1870****504" Foreground="{StaticResource 深灰边框}" />
+                            </StackPanel>
+                        </StackPanel>
+                    </a:CLink>
+                    <a:CLink x:Name="_link" Title="切换内容" IsHorStretch="False" Click="OnToggleLink" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
