--- a/Client/Dt.Base/Themes/Styles/FormView.xaml
+++ b/Client/Dt.Base/Themes/Styles/FormView.xaml
@@ -89,7 +89,7 @@
     <!--CBar-->
     <Style TargetType="a:CBar">
         <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
-        <Setter Property="Background" Value="{StaticResource 默认背景}" />
+        <Setter Property="Background" Value="{StaticResource 浅灰背景}" />
         <Setter Property="BorderBrush" Value="{StaticResource 浅灰边框}" />
         <Setter Property="Template">
             <Setter.Value>
@@ -296,6 +296,52 @@
                                        Grid.Column="1" />
                         </Grid>
                     </fv:CellPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--CLink-->
+    <Style TargetType="a:CLink">
+        <Setter Property="Foreground" Value="{StaticResource 默认前景}" />
+        <Setter Property="Background" Value="{StaticResource 默认背景}" />
+        <Setter Property="BorderBrush" Value="{StaticResource 浅灰边框}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="a:CLink">
+                    <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Rectangle x:Name="Rect"
+                                   Stroke="{TemplateBinding BorderBrush}"
+                                   Margin="0,0,-1,-1"
+                                   IsHitTestVisible="False"
+                                   Grid.ColumnSpan="2" />
+                        <TextBlock Text="&#xE086;"
+                                   FontFamily="{StaticResource IconFont}"
+                                   FontSize="20"
+                                   Margin="10,0,10,0"
+                                   VerticalAlignment="Center"
+                                   Grid.Column="1" />
+
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CommonStates">
+                                <VisualState x:Name="Normal" />
+                                <VisualState x:Name="PointerOver">
+                                    <VisualState.Setters>
+                                        <Setter Target="Rect.Fill" Value="{StaticResource 暗遮罩}" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="Pressed">
+                                    <VisualState.Setters>
+                                        <Setter Target="Rect.Fill" Value="{StaticResource 深暗遮罩}" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
